# mojiokoshi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  context.md  project-improvements.md  project-knowledge.md
_docs/: 2025-07-12_gradio_ui_implementation.md
docs/: UI_DESIGN.md
scripts/: demo.py
src/transcription_tool/: __init__.py  __main__.py  app.py  file_manager.py  model_utils.py  transcriber.py  utils.py
tests/: test_app.py  test_model_utils.py  test_transcriber.py  test_utils.py
